--- a/views/sample.html
+++ b/views/sample.html
@@ -66,7 +66,7 @@
             // 発言の内側のDIV要素
             // ユーザー側のdiv
               var talkContent = $("<div></div>", {
-                  "class": "talk alert alert-success pull-left col-md-5",
+                  "class": "talk alert alert-success pull-left col-sm-6",
                   "style": "word-wrap: break-word",
                   "text" : "何か文字を入力してね",
                 })
@@ -85,7 +85,7 @@
            // 発言の内側のDIV要素
            // ユーザー側のdiv
              var talkContent = $("<div></div>", {
-                 "class": "talk alert alert-info pull-right col-md-5",
+                 "class": "talk alert alert-info pull-right col-sm-6",
                  "style": "word-wrap: break-word",
                  "title":"user",
                  "text" : input,
@@ -124,7 +124,7 @@
             // 発言の内側のDIV要素
             // bot側のdiv
              var talkData = $("<div></div>", {
-               "class": "talk alert alert-success pull-left col-md-5",
+               "class": "talk alert alert-success pull-left col-sm-6",
                "style": "word-wrap: break-word",
                "title": "bot",
                "text" : newData,
