--- a/static/display_mode.css
+++ b/static/display_mode.css
@@ -1,5 +1,5 @@
 #display-mode{
-  style="width:360px;
+  width:360px;
   height: 500px;
   border: 1px solid #333333;
   z-index:10;
@@ -9,50 +9,60 @@
 
 /* headerのcss */
 #header{
-   height:124px;
-   width:100%;
+  height:124px;
+  width:100%;
 }
 
 .title-word{
-    width:70%;
-    height:78px;
-    padding-top: 14px;
-    /* padding-bottom: 24px; */
-    margin-top: 24px;
-    margin-bottom: 24px;
-    display:inline-block;
-    text-align: center;
-    font-size: 50px;
-    font-weight: 700;
+  width:70%;
+  height:78px;
+  padding-top: 14px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  display:inline-block;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .minus-close-button{
-   style="display:inline-block;
-   width: 30%;
-   float: right;
-   text-align: center;
-   font-size: 245%;
+  width:30%;
+  height:78px;
+  display:inline-block;
+  float:right;
+  text-align:center;
+  font-size:245%;
+  padding-top: 14px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 
 /* mainのcss */
 #main{
-    background-color:gray;
-    height:350px;
-    z-index:150;
+  background-color:gray;
+  height:350px;
+  z-index:150;
 }
 
 #chat_area{
   overflow:auto;
   border:solid;
-  width:374px;
+  width:358px;
   height:350px;
+  /* padding-left: 0px; */
+  /* padding-right:0px; */
   margin-left: 0px;
   margin-right: 0px;
   vertical-align:bottom;
   background-color: #DDDDDD;
   z-index :1;
 }
+
+/* .pull-right{
+  margin: 0px;
+
+} */
 
 
 /* footerのcss */
