--- a/views/sample.html
+++ b/views/sample.html
@@ -26,7 +26,7 @@
     <div id="display-mode">
         <div id="header">
            <h2 class="title-word">ChatBot</h2>
-           <h2 class="minus-close-button"><i class="fas fa-minus" style="cursor: pointer; font-size: 150%;" onclick="hyouji1(1)"></i></h2>
+           <i class="fas fa-minus minus-close-button" style="cursor: pointer;" onclick="hyouji1(1)"></i>
          </div>
 
         <div id="main">
